--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,10 +420,20 @@ section {
 # Akills
 --------------------------------------------------------------*/
 .skills .progress {
-  height: 60px;
+  height: 70px;
   display: block;
   background: none;
   border-radius: 0;
+}
+
+.skills .img {
+  /* padding: 5%; */
+  margin: 5px;
+  height: 80px;
+  /* box-shadow: 10px #040b14; */
+  box-shadow: 0px 0px 8px 1px rgb(81, 90, 119);
+  border-radius: 4%;
+  /* box-shadow: 5px 10px; */
 }
 
 .skills .progress .skill {
