--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,8 +431,8 @@ section {
   margin: 5px;
   height: 80px;
   /* box-shadow: 10px #040b14; */
-  box-shadow: 0px 0px 8px 1px rgb(81, 90, 119);
-  border-radius: 4%;
+  /* box-shadow: 0px 0px 3px 1px rgb(81, 90, 119); */
+  /* border-radius: 4%; */
   /* box-shadow: 5px 10px; */
 }
 
